--- a/eve1.css
+++ b/eve1.css
@@ -3,10 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* body{
-    background-color:black;
-    color: #ffffff;
-} */
+
 .video_container{
     display: flex;
     justify-content: center;
@@ -20,6 +17,7 @@
     overflow: hidden;
     border-radius: 14px;
 }
+
 .video_container .video video{
     height: 100%;
     width: 100%;
@@ -27,12 +25,9 @@
     outline: none;
     border: none;
     cursor: pointer;
+    transition: 0.5s ease-in-out;
 }
-.video_container .video video:hover{
-    transition: .2s linear;
-    transform: scale(1.2);
-}
-.video_container .video .active{
+/* .video_container .video .active{
     position: fixed;
     top: 50%;left: 50%;
     transform: translate(-50%,-50%);
@@ -40,11 +35,20 @@
     width: 40%;
     box-shadow: 0 0 0 100vh rgba(0,0,0,0.7);
     z-index: 1;
-}
-.video_container .video .active:hover{
+} */
+
+/* .video_container .video .active:hover{
     transition: none;
     transform:translate(-50%,-50%) scale(1) ;
+} */
+
+
+.video_container .video video:hover{
+    transition: .2s linear;
+    transform: scale(1.2);
 }
+
+
 
 @media screen and (max-width: 760px){
     .video_container .video .active{
@@ -65,3 +69,4 @@
         width: 80%;
     }
 }
+
