--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ html,body{
 .column3{
   height:600px;
 }
+.header-image{
+  background:url(img/cover_pratibimbweb.png) ;
+  background-size: 100% 100%;
+  height: 85vh;
+}
 .milestones{
   background: url(img/milestones.png) no-repeat;
   background-size: 100% 100%;
