--- a/style_responsive.css
+++ b/style_responsive.css
@@ -104,4 +104,10 @@
   
 }
   }
+@media only screen and (max-width: 400px){ 
+  .header-image{
+    background:url(img/mobile_cover.jpg) ;
+    background-size: 100% 100%;
+    height: 82vh;
+  }}
   
