--- a/certificates.css
+++ b/certificates.css
@@ -42,6 +42,17 @@
   display: flex;
   flex-direction: row;
 }
+#rj{
+    width: 80%;
+    margin-left: 10px;
+}
+.proof{
+    font-size: 15.5px;
+    margin-right : 52px; 
+  }
+  .myfile{
+    border-radius: 5px 5px;
+  }
 
 
 
@@ -105,4 +116,3 @@ body {
   font-family: poppins, sans-serif;
   margin: 0;
 }
-
