--- a/certi_resp.css
+++ b/certi_resp.css
@@ -7,7 +7,7 @@
   }
 @media screen and (max-width: 1000px) {
     .contain {
-      display: flex;
+      display:flex;
       flex-direction: column;
     }
     .certi-img {
@@ -19,22 +19,35 @@
       width: 100%;
       height: 800px;
     }
+    .btn{
+      margin-top: 10px;
+    }
   }
 @media screen and (max-width: 600px){
     .form-right {
         height: 800px;
       }
-  }
+     
+      }
+@media screen and (max-width: 575px){
+          #rj{
+            width: 95%;
+            margin-left: 10px;
+        }
+          }
+
 @media screen and (max-width: 450px){
     .form-right {
         height: 800px;
         padding-left: 2rem;
         padding-right: 2rem;
       }
-    
+     
     }
 @media screen and (max-width: 350px){
+  
     .form-right {
         height: 800px;
 }
+
   }
