--- a/style_responsive.css
+++ b/style_responsive.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1024px)
+{
+  .event-button{
+    display:none;
+  }
+}
 @media only screen and (max-width: 960px) {
     .column1,.column,.column2,.column4,.column3{
       width: 100%;
