--- a/style_responsive.css
+++ b/style_responsive.css
@@ -92,7 +92,7 @@
     }
       
       .meraki-main-image,.event-main-image{
-  display:none;
+/*   display:none; */
 }
 
 .meraki-button,.event-button{
@@ -110,9 +110,4 @@
   
 }
   }
-  @media only screen and (max-width: 400px){ 
-  .header-image{
-    /* background:url(img/mobile_cover.jpg) ; */
-    background-size: 100% 100%;
-    height: 50vh;
-  }}
+ 
