--- a/meraki.css
+++ b/meraki.css
@@ -78,6 +78,11 @@ margin-top:30px;
     background-repeat:no-repeat;
     background-position: center;    
 }
+
+.meraki_image{
+    background: url(img/Kalopsia Poster (1) 1.png) no-repeat;
+  background-size: 100% 100%;
+}
 .rules1{
     color:#ffffff;
     background-color:  #000000;
