--- a/meraki.css
+++ b/meraki.css
@@ -81,6 +81,7 @@ margin-top:30px;
 
 .meraki_image{
     background: url(img/Kalopsia Poster (1) 1.png) no-repeat;
+    background-image: url("img/Kalopsia Poster (1) 1.png");
   background-size: 100% 100%;
 }
 .rules1{
