--- a/meraki.css
+++ b/meraki.css
@@ -82,7 +82,7 @@ margin-top:30px;
 .meraki_image{
     background: url(img/Kalopsia Poster (1) 1.png) no-repeat;
     background-image: url("img/Kalopsia Poster (1) 1.png");
-  background-size: cover;
+  background-size: 100% 100%;
 }
 .rules1{
     color:#ffffff;
