--- a/meraki.css
+++ b/meraki.css
@@ -105,6 +105,8 @@ margin-top:30px;
 .registor img{
     margin:auto;
     /* padding-left: 515px; */
+    margin-top:30px;
+    margin-bottom:30px;
 }
 
 .spon{
