--- a/eve1.css
+++ b/eve1.css
@@ -1,7 +1,9 @@
 
-  * {
+ *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
+}
   html,body{
     font-family: poppins,sans-serif;
     margin:0;
@@ -132,6 +134,75 @@
   width:100%;
   height:466px;
 }
+
+
+.video_container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.video_container .video{
+    height: 25rem;
+    width: 20rem;
+    margin: 2rem ;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    border-radius: 14px;
+}
+
+.video_container .video video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+
+/* .video_container .video .active{
+    position: fixed;
+    top: 50%;left: 50%;
+    transform: translate(-50%,-50%);
+    height: auto;
+    width: 40%;
+    box-shadow: 0 0 0 100vh rgba(0,0,0,0.7);
+    z-index: 1;
+} */
+
+/* .video_container .video .active:hover{
+    transition: none;
+    transform:translate(-50%,-50%) scale(1) ;
+} */
+
+
+.video_container .video video:hover{
+    transition: .2s linear;
+    transform: scale(1.2);
+}
+
+
+
+@media screen and (max-width: 760px){
+    .video_container .video .active{
+        /* width: 55%; */
+    }
+}
+@media screen and (max-width: 640px){
+    .video_container .video .active{
+        /* width: 60%; */
+    }
+    .video_container .video video:hover{
+        transition: none;
+        transform: scale(1);
+    }
+}
+@media screen and (max-width: 500px){
+    .video_container .video .active{
+        /* width: 80%; */
+    }
+}
+
 @media only screen and (max-width: 540px){
   .eve-row{
       padding-left:0;
