--- a/style.css
+++ b/style.css
@@ -680,7 +680,7 @@ color: #1FE0BD;
   right: 100px;
 }
 
-.event-button{
+/* .event-button{
   max-width:15%;
   position:absolute;
   top: 460px;
@@ -693,8 +693,14 @@ color: #1FE0BD;
     top: 465px;
     z-index: 2;
     left: 361px;
+} */
+.event-button3{
+  max-width: 35%;
+    position: absolute;
+    top: -65px;
+    z-index: 2;
+    left: 115px;
 }
-
 .meraki-mobile,.event-mobile{
   display:none;
 }
