--- a/style.css
+++ b/style.css
@@ -698,7 +698,7 @@ color: #1FE0BD;
 .event-button3{
   max-width: 35%;
     position: absolute;
-    top: -65px;
+    top: auto;
     z-index: 2;
     left: 115px;
 }
